# value-invest

./: CMakeLists.txt  Dockerfile  README.md
docs/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt
lib/curl_handler/: CMakeLists.txt
lib/curl_handler/include/: curl_handler.h
lib/curl_handler/src/: curl_handler.cpp
lib/curl_handler/test/: curl_handler_test.cpp
lib/error_codes/: CMakeLists.txt
lib/error_codes/include/: error_codes.h
lib/error_codes/src/: error_codes.cpp
lib/financial_json/: CMakeLists.txt
lib/financial_json/include/: financial_json.h  income_statement.h
lib/financial_json/src/: financial_json.cpp  income_statement.cpp
lib/financial_json_parser/: CMakeLists.txt
lib/financial_json_parser/include/: financial_json_parser.h  income_statement_parser.h
lib/financial_json_parser/src/: financial_json_parser.cpp  income_statement_parser.cpp
lib/financial_report/: CMakeLists.txt
lib/financial_report/include/: financial_report.h  income_statement.h
lib/financial_report/src/: financial_report.cpp
lib/financial_report_types/: CMakeLists.txt
lib/financial_report_types/include/: balance_sheet.h  cash_flow.h  earnings.h  financial_report_types.h  income_statement.h  stock_overview.h
lib/financial_report_types/src/: financial_report_types.cpp
lib/json_parser/: CMakeLists.txt
lib/json_parser/include/: financial_data.h  income_statement.h  income_statement_parser.h  json_parser.h
lib/json_parser/src/: income_statement_parser.cpp  json_parser.cpp
lib/json_parser/test/: json_mocks.h  json_parser_test.cpp
lib/stock_data/: CMakeLists.txt
lib/stock_data/include/: stock_data.h
lib/stock_data/src/: stock_data.cpp
lib/stock_valuation/: CMakeLists.txt
lib/stock_valuation/include/: stock_valuation.h
lib/stock_valuation/src/: stock_valuation.cpp
src/: value_invest.cpp
tests/: CMakeLists.txt
